Bug 388983 - Systemsettings crashes setting "Default Web Shortcut"
Summary: Systemsettings crashes setting "Default Web Shortcut"
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: David Faure
URL:
Keywords: drkonqi
: 389086 389133 389497 389541 389666 389734 390036 390212 390237 390276 390301 390361 390420 391392 391950 392353 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-01-15 01:05 UTC by Tony
Modified: 2018-03-30 19:41 UTC (History)
18 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tony 2018-01-15 01:05:22 UTC
Application: kdeinit5 (5.11.90)

Qt Version: 5.10.0
Frameworks Version: 5.42.0
Operating System: Linux 4.14.11-1-default x86_64
Distribution: "openSUSE Tumbleweed"

-- Information about the crash:
- What I was doing when the application crashed:
Trying to chage the default web shortcut for konsole to duck duck go.

-Steps to reproduce:
Open a konsole window
Right click, select "search for", open the "Web Shortcuts"
Either Click "OK" or "Cancel", no changes are necesary, even if you do they are not saved.

Doing the same from Systemsettings>Shortcuts>Web Shortcuts as well as running the module directly from Krunner does not trigger the crash.

The crash can be reproduced every time.

-- Backtrace:
Application: System Settings Module (kdeinit5), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f11efcbd780 (LWP 4005))]

Thread 3 (Thread 0x7f11d2a17700 (LWP 4007)):
#0  0x00007f11edd3df2b in __GI___poll (fds=0x7f11cc002de0, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f11ea4de149 in g_main_context_poll (priority=<optimized out>, n_fds=1, fds=0x7f11cc002de0, timeout=<optimized out>, context=0x7f11cc000be0) at gmain.c:4187
#2  g_main_context_iterate (context=context@entry=0x7f11cc000be0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3881
#3  0x00007f11ea4de25c in g_main_context_iteration (context=0x7f11cc000be0, may_block=1) at gmain.c:3947
#4  0x00007f11ee2f257b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#5  0x00007f11ee2994aa in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#6  0x00007f11ee0c08da in QThread::exec() () from /usr/lib64/libQt5Core.so.5
#7  0x00007f11e67afbd5 in QDBusConnectionManager::run() () from /usr/lib64/libQt5DBus.so.5
#8  0x00007f11ee0c58d0 in QThreadPrivate::start(void*) () from /usr/lib64/libQt5Core.so.5
#9  0x00007f11ec3b7558 in start_thread (arg=0x7f11d2a17700) at pthread_create.c:465
#10 0x00007f11edd486df in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7f11d9a27700 (LWP 4006)):
#0  0x00007f11edd3df2b in __GI___poll (fds=fds@entry=0x7f11d9a26d48, nfds=nfds@entry=1, timeout=timeout@entry=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f11ef10d387 in poll (__timeout=-1, __nfds=1, __fds=0x7f11d9a26d48) at /usr/include/bits/poll2.h:46
#2  _xcb_conn_wait (c=c@entry=0x559db22df120, cond=cond@entry=0x559db22df160, vector=vector@entry=0x0, count=count@entry=0x0) at xcb_conn.c:479
#3  0x00007f11ef10f17a in xcb_wait_for_event (c=0x559db22df120) at xcb_in.c:693
#4  0x00007f11dca358d9 in QXcbEventReader::run() () from /usr/lib64/libQt5XcbQpa.so.5
#5  0x00007f11ee0c58d0 in QThreadPrivate::start(void*) () from /usr/lib64/libQt5Core.so.5
#6  0x00007f11ec3b7558 in start_thread (arg=0x7f11d9a27700) at pthread_create.c:465
#7  0x00007f11edd486df in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7f11efcbd780 (LWP 4005)):
[KCrash Handler]
#6  0x0000000000000031 in ?? ()
#7  0x00007f11d10764ee in qDeleteAll<QList<SearchProvider*>::const_iterator> (end=..., begin=...) at /usr/include/qt5/QtCore/qalgorithms.h:320
#8  qDeleteAll<QList<SearchProvider*> > (c=...) at /usr/include/qt5/QtCore/qalgorithms.h:328
#9  ProvidersModel::~ProvidersModel (this=0x559db23dedf0, __in_chrg=<optimized out>) at /usr/src/debug/kio-5.41.0git.20180114T135246~017eb3f1/src/urifilters/ikws/ikwsopts.cpp:43
#10 0x00007f11d1076559 in ProvidersModel::~ProvidersModel (this=0x559db23dedf0, __in_chrg=<optimized out>) at /usr/src/debug/kio-5.41.0git.20180114T135246~017eb3f1/src/urifilters/ikws/ikwsopts.cpp:44
#11 0x00007f11ee2c6b8b in QObjectPrivate::deleteChildren() () from /usr/lib64/libQt5Core.so.5
#12 0x00007f11ec977d0c in QWidget::~QWidget() () from /usr/lib64/libQt5Widgets.so.5
#13 0x00007f11e2c21141 in KCModule::~KCModule (this=0x559db23ea330, __in_chrg=<optimized out>) at /usr/src/debug/kconfigwidgets-5.41.0git.20180105T234114~72a795a/src/kcmodule.cpp:178
#14 0x00007f11d1085d37 in FilterOptions::~FilterOptions (this=0x559db23ea330, __in_chrg=<optimized out>) at /usr/src/debug/kio-5.41.0git.20180114T135246~017eb3f1/src/urifilters/ikws/ikwsopts.h:35
#15 FilterOptions::~FilterOptions (this=0x559db23ea330, __in_chrg=<optimized out>) at /usr/src/debug/kio-5.41.0git.20180114T135246~017eb3f1/src/urifilters/ikws/ikwsopts.h:35
#16 0x00007f11d14a417e in qDeleteAll<QList<KCModule*>::const_iterator> (end=..., begin=...) at /usr/include/qt5/QtCore/qalgorithms.h:320
#17 qDeleteAll<QList<KCModule*> > (c=...) at /usr/include/qt5/QtCore/qalgorithms.h:328
#18 KURIFilterModule::~KURIFilterModule (this=0x559db23aa140, __in_chrg=<optimized out>) at /usr/src/debug/kio-5.41.0git.20180114T135246~017eb3f1/src/kcms/webshortcuts/main.cpp:124
#19 0x00007f11d14a41c9 in KURIFilterModule::~KURIFilterModule (this=0x559db23aa140, __in_chrg=<optimized out>) at /usr/src/debug/kio-5.41.0git.20180114T135246~017eb3f1/src/kcms/webshortcuts/main.cpp:125
#20 0x00007f11de493674 in KCModuleProxy::deleteClient (this=this@entry=0x559db238fdc0) at /usr/src/debug/kcmutils-5.41.0git.20180105T234107~f5ea463/src/kcmoduleproxy.cpp:179
#21 0x00007f11de49371f in KCModuleProxy::~KCModuleProxy (this=0x559db238fdc0, __in_chrg=<optimized out>) at /usr/src/debug/kcmutils-5.41.0git.20180105T234107~f5ea463/src/kcmoduleproxy.cpp:170
#22 0x00007f11de4938e9 in KCModuleProxy::~KCModuleProxy (this=0x559db238fdc0, __in_chrg=<optimized out>) at /usr/src/debug/kcmutils-5.41.0git.20180105T234107~f5ea463/src/kcmoduleproxy.cpp:174
#23 0x00007f11ee2c6b8b in QObjectPrivate::deleteChildren() () from /usr/lib64/libQt5Core.so.5
#24 0x00007f11ec977d0c in QWidget::~QWidget() () from /usr/lib64/libQt5Widgets.so.5
#25 0x00007f11ec977f29 in QWidget::~QWidget() () from /usr/lib64/libQt5Widgets.so.5
#26 0x00007f11ee2c6b8b in QObjectPrivate::deleteChildren() () from /usr/lib64/libQt5Core.so.5
#27 0x00007f11ec977d0c in QWidget::~QWidget() () from /usr/lib64/libQt5Widgets.so.5
#28 0x00007f11ecac7d79 in QScrollArea::~QScrollArea() () from /usr/lib64/libQt5Widgets.so.5
#29 0x00007f11ee2c6b8b in QObjectPrivate::deleteChildren() () from /usr/lib64/libQt5Core.so.5
#30 0x00007f11ec977d0c in QWidget::~QWidget() () from /usr/lib64/libQt5Widgets.so.5
#31 0x00007f11e317e8dd in KPageStackedWidget::~KPageStackedWidget (this=0x559db232e000, __in_chrg=<optimized out>) at /usr/src/debug/kwidgetsaddons-5.41.0git.20180105T234230~39806b2/src/kpageview_p.h:37
#32 KPageStackedWidget::~KPageStackedWidget (this=0x559db232e000, __in_chrg=<optimized out>) at /usr/src/debug/kwidgetsaddons-5.41.0git.20180105T234230~39806b2/src/kpageview_p.h:37
#33 0x00007f11ee2c6b8b in QObjectPrivate::deleteChildren() () from /usr/lib64/libQt5Core.so.5
#34 0x00007f11ec977d0c in QWidget::~QWidget() () from /usr/lib64/libQt5Widgets.so.5
#35 0x00007f11e31826d9 in KPageWidget::~KPageWidget (this=0x559db2356d30, __in_chrg=<optimized out>) at /usr/src/debug/kwidgetsaddons-5.41.0git.20180105T234230~39806b2/src/kpagewidget.cpp:80
#36 0x00007f11ee2c6b8b in QObjectPrivate::deleteChildren() () from /usr/lib64/libQt5Core.so.5
#37 0x00007f11ec977d0c in QWidget::~QWidget() () from /usr/lib64/libQt5Widgets.so.5
#38 0x00007f11de6caddd in KCMShellMultiDialog::~KCMShellMultiDialog (this=0x559db2347030, __in_chrg=<optimized out>) at /usr/src/debug/kde-cli-tools-5.11.90git.20180113T004746~556dd1c/kcmshell/main.h:81
#39 KCMShellMultiDialog::~KCMShellMultiDialog (this=0x559db2347030, __in_chrg=<optimized out>) at /usr/src/debug/kde-cli-tools-5.11.90git.20180113T004746~556dd1c/kcmshell/main.h:81
#40 0x00007f11ee2c97c8 in QObject::event(QEvent*) () from /usr/lib64/libQt5Core.so.5
#41 0x00007f11ec97c813 in QWidget::event(QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#42 0x00007f11ec93fe6c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#43 0x00007f11ec947164 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#44 0x00007f11ee29ac98 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib64/libQt5Core.so.5
#45 0x00007f11ee29d675 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib64/libQt5Core.so.5
#46 0x00007f11ee2f2ee3 in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () from /usr/lib64/libQt5Core.so.5
#47 0x00007f11ea4ddf97 in g_main_dispatch (context=0x7f11d4004fc0) at gmain.c:3148
#48 g_main_context_dispatch (context=context@entry=0x7f11d4004fc0) at gmain.c:3813
#49 0x00007f11ea4de1d0 in g_main_context_iterate (context=context@entry=0x7f11d4004fc0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at gmain.c:3886
#50 0x00007f11ea4de25c in g_main_context_iteration (context=0x7f11d4004fc0, may_block=1) at gmain.c:3947
#51 0x00007f11ee2f255f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#52 0x00007f11dcab6f61 in QPAEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5XcbQpa.so.5
#53 0x00007f11ee2994aa in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#54 0x00007f11ee2a1fe4 in QCoreApplication::exec() () from /usr/lib64/libQt5Core.so.5
#55 0x00007f11de6c9520 in kdemain (_argc=<optimized out>, _argv=<optimized out>) at /usr/src/debug/kde-cli-tools-5.11.90git.20180113T004746~556dd1c/kcmshell/main.cpp:321
#56 0x0000559db1091a2f in ?? ()
#57 0x0000559db1092d5c in ?? ()
#58 0x0000559db10936cf in ?? ()
#59 0x0000559db108e56c in ?? ()
#60 0x00007f11edc70f4a in __libc_start_main (main=0x559db108dcc0, argc=5, argv=0x7ffe06795838, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffe06795828) at ../csu/libc-start.c:308
#61 0x0000559db108f1aa in _start ()

Reported using DrKonqi
Comment 1 Kai Uwe Broulik 2018-01-17 08:35:36 UTC
*** Bug 389086 has been marked as a duplicate of this bug. ***
Comment 2 Kai Uwe Broulik 2018-01-17 08:35:57 UTC
I can reproduce the crash.
Comment 3 Kai Uwe Broulik 2018-01-17 08:52:02 UTC
Git commit e0f3fac05287933bac2d89f50e5bec677456d320 by Kai Uwe Broulik.
Committed on 17/01/2018 at 08:51.
Pushed by broulik into branch 'master'.

[Uri Filter Search Provider] Avoid double delete

Since 6246cc48067845208cf5acd8b798abd68349cf18 the SearchProviderRegistry does that leading to a double delete on KCM destruction.

Differential Revision: https://phabricator.kde.org/D9938

M  +1    -1    src/urifilters/ikws/ikwsopts.cpp

https://commits.kde.org/kio/e0f3fac05287933bac2d89f50e5bec677456d320
Comment 4 Patrick Silva 2018-01-21 22:44:21 UTC
*** Bug 389133 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2018-01-31 04:19:48 UTC
*** Bug 389497 has been marked as a duplicate of this bug. ***
Comment 6 Christoph Feck 2018-01-31 04:21:27 UTC
*** Bug 389541 has been marked as a duplicate of this bug. ***
Comment 7 Christoph Feck 2018-01-31 04:22:07 UTC
*** Bug 389666 has been marked as a duplicate of this bug. ***
Comment 8 Kai Uwe Broulik 2018-02-05 13:52:53 UTC
*** Bug 389734 has been marked as a duplicate of this bug. ***
Comment 9 Christoph Feck 2018-02-09 13:49:25 UTC
*** Bug 390036 has been marked as a duplicate of this bug. ***
Comment 10 Christoph Feck 2018-02-11 05:55:02 UTC
*** Bug 390212 has been marked as a duplicate of this bug. ***
Comment 11 Christoph Feck 2018-02-11 05:55:15 UTC
*** Bug 390237 has been marked as a duplicate of this bug. ***
Comment 12 Женя 2018-02-12 10:13:06 UTC
*** Bug 390301 has been marked as a duplicate of this bug. ***
Comment 13 Christoph Feck 2018-02-28 23:47:18 UTC
*** Bug 390276 has been marked as a duplicate of this bug. ***
Comment 14 Christoph Feck 2018-02-28 23:47:30 UTC
*** Bug 390361 has been marked as a duplicate of this bug. ***
Comment 15 Christoph Feck 2018-02-28 23:47:42 UTC
*** Bug 390420 has been marked as a duplicate of this bug. ***
Comment 16 Christoph Feck 2018-03-05 00:42:31 UTC
*** Bug 391392 has been marked as a duplicate of this bug. ***
Comment 17 Christoph Feck 2018-03-26 22:19:50 UTC
*** Bug 392353 has been marked as a duplicate of this bug. ***
Comment 18 Christoph Feck 2018-03-30 19:41:06 UTC
*** Bug 391950 has been marked as a duplicate of this bug. ***