[Uri Filter Search Provider] Avoid double delete

Since 6246cc48067845208cf5acd8b798abd68349cf18 the SearchProviderRegistry does that leading to a double delete on KCM destruction.

BUG: 388983

Differential Revision: https://phabricator.kde.org/D9938